kubernetes/aiostreams/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiostreams
  namespace: aiostreams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiostreams
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: aiostreams
    spec:
      containers:
        - name: aiostreams
          image: ghcr.io/viren070/aiostreams:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: aiostreams-data
