kubernetes/aiostreams/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiostreams
  namespace: aiostreams
spec:
  selector:
    app: aiostreams
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
